[gd_scene load_steps=10 format=3 uid="uid://d1j7rwpetj4fs"]

[ext_resource type="Texture2D" uid="uid://cl4ddaoish1ew" path="res://Game/3UI/TextBox/Texture/TextBox.png" id="1_lvd26"]
[ext_resource type="Script" path="res://Game/3UI/TextBox/Script/text_box_oldman.gd" id="1_vkt7r"]
[ext_resource type="Texture2D" uid="uid://e66jq04okpm4" path="res://Game/3UI/Inventory/Texture/Button_disa.png" id="3_k0762"]
[ext_resource type="Texture2D" uid="uid://6cu5o7bilnbk" path="res://Game/3UI/PauseMenu/Texture/Button.png" id="4_iverd"]
[ext_resource type="Texture2D" uid="uid://d8gjq4o1acm4" path="res://Game/3UI/PauseMenu/Texture/Button_selected.png" id="5_ec3ka"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wm60p"]
texture = ExtResource("3_k0762")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_21dd5"]
texture = ExtResource("4_iverd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_61fm1"]
texture = ExtResource("5_ec3ka")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tibqp"]
texture = ExtResource("4_iverd")

[node name="text_box_oldman" type="CanvasLayer"]
script = ExtResource("1_vkt7r")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 154.0
offset_top = 533.0
offset_right = 998.0
offset_bottom = 621.0
texture = ExtResource("1_lvd26")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 833.0
offset_bottom = 76.0

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 2
offset_left = 797.0
offset_top = 61.0
offset_right = 837.0
offset_bottom = 84.0
text = "Click"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.04
autostart = true

[node name="Yes" type="Button" parent="."]
visible = false
texture_filter = 1
offset_left = 279.0
offset_top = 317.0
offset_right = 487.0
offset_bottom = 395.0
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxTexture_wm60p")
theme_override_styles/hover = SubResource("StyleBoxTexture_21dd5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_61fm1")
theme_override_styles/normal = SubResource("StyleBoxTexture_tibqp")
text = "YES
"

[node name="Button" type="Button" parent="."]
visible = false
texture_filter = 1
offset_left = 655.0
offset_top = 317.0
offset_right = 863.0
offset_bottom = 395.0
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxTexture_wm60p")
theme_override_styles/hover = SubResource("StyleBoxTexture_21dd5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_61fm1")
theme_override_styles/normal = SubResource("StyleBoxTexture_tibqp")
text = "NO"

[node name="final" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="final" to="." method="_on_final_timeout"]
